# ZonoOpt_eigen_3_4

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_and_release.yml  build_wheels.yml
cmake/: ZonoOptConfig.cmake.in
docs/C++/: Doxyfile
docs/C++/html/: ADMM_8cpp.html  ADMM_8hpp.html  ADMM_8hpp_source.html  CholeskyUtilities_8cpp.html  CholeskyUtilities_8hpp.html  CholeskyUtilities_8hpp_source.html  ConZono_8cpp.html  ConZono_8hpp.html  ConZono_8hpp_source.html  EmptySet_8cpp.html  EmptySet_8hpp.html  EmptySet_8hpp_source.html  GenUtilities_8hpp.html  GenUtilities_8hpp_source.html  HybZono_8cpp.html  HybZono_8hpp.html  HybZono_8hpp_source.html  Inequality_8hpp.html  Inequality_8hpp_source.html  Intervals_8cpp.html  Intervals_8hpp.html  Intervals_8hpp_source.html  MI__DataStructures_8hpp.html  MI__DataStructures_8hpp_source.html  MI__Solver_8cpp.html  MI__Solver_8hpp.html  MI__Solver_8hpp_source.html  Point_8cpp.html  Point_8hpp.html  Point_8hpp_source.html  PolymorphicFunctions_8cpp.html  PolymorphicFunctions_8hpp.html  PolymorphicFunctions_8hpp_source.html  README_8md.html  SolverDataStructures_8hpp.html  SolverDataStructures_8hpp_source.html  SparseMatrixUtilities_8hpp.html  SparseMatrixUtilities_8hpp_source.html  ZonoOpt_8hpp.html  ZonoOpt_8hpp_source.html  (+96 more)
docs/C++/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_19.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  all_e.js  all_f.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_9.js  files_a.js  functions_0.js  functions_1.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_9.js  functions_b.js  (+14 more)
docs/python/source/: conf.py
examples/mhe/: mhe_example.py
examples/mpc/: mpc_example.py
examples/reachability/: reachability_example.py
examples/single-integrator-mpc/: mpc_example.py
examples/sparsity/: sparsity_example.py
include/: ADMM.hpp  AbstractZono.hpp  CholeskyUtilities.hpp  ConZono.hpp  EmptySet.hpp  GenUtilities.hpp  HybZono.hpp  IntervalUtilities.hpp  Intervals.hpp  MI_Solver.hpp  Point.hpp  PolymorphicFunctions.hpp  SolverDataStructures.hpp  SparseMatrixUtilities.hpp  Zono.hpp  ZonoOpt.hpp
python/src/: zonoopt_py.cpp
python/zonoopt/: __init__.pyi  _core.pyi  zono_plot.py
src/: ADMM.cpp  CholeskyUtilities.cpp  ConZono.cpp  EmptySet.cpp  HybZono.cpp  Intervals.cpp  MI_Solver.cpp  Point.cpp  PolymorphicFunctions.cpp  Zono.cpp
test/: CMakeLists.txt
test/src/: example_operations.cpp  test_polymorphism.cpp
test/unit-tests/: unit_tests.py
test/unit-tests/halfspace_intersection/: A.txt  G.txt  b.txt
